# Graduation-work-code

./: README.md
src/Find the largest positive direction node/: area_find.py  package.xml  setup.cfg  setup.py
src/Model recognition node/: VisualizationNode.py  package.xml  setup.py  tracking_node.py
src/Model recognition node/launch/: CMakeLists.txt  package.xml  yolov8.launch.py
src/Model recognition node/ros2 message file/: CMakeLists.txt  package.xml
src/Model recognition node/ros2 message file/msg/: Detection.msg  DetectionArray.msg  KeyPoint.msg  KeyPointArray.msg  Mask.msg  MsgBoundingBox.msg  MsgPose.msg  MsgVector.msg
src/Robotic arm, soil sensor and antenna/: Robotic arm.py
src/src/: Robotic arm.py  Soil sensors and antennas.c
src/src/find_the_largest_positivedirection_node/: package.xml  setup.cfg  setup.py
src/src/find_the_largest_positivedirection_node/find_the_largest_positivedirection/: area_find.py
src/src/model_recognition/: requirements.txt
src/src/model_recognition/launch/: CMakeLists.txt  package.xml
src/src/model_recognition/model_recognition/: package.xml  setup.cfg  setup.py
src/src/model_recognition/model_recognition/model_recognition/: VisualizationNode.py  tracking_node.py  yolov8_node.py
src/src/model_recognition/ros2_message_file/: CMakeLists.txt  package.xml
src/src/model_recognition/ros2_message_file/msg/: Detection.msg  DetectionArray.msg  KeyPoint.msg  KeyPointArray.msg  Mask.msg  MsgBoundingBox.msg  MsgPose.msg  Msgpoint.msg
