<?xml version="1.0"?>
<package format="3">
  <!-- 包的基本信息 -->
  <name>yolov8_msgs</name>
  <version>0.0.0</version>
  <description>Msgs for YOLOv8</description>
  
  <!-- 维护者信息 -->
  <maintainer email="123@123.ru">123</maintainer>
  
  <!-- 许可证声明 -->
  <license>License declaration</license>

  <!-- 构建工具依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 测试依赖 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- 成员组声明 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- 运行和构建依赖 -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- 导出信息 -->
  <export>
    <build_type>ament_cmake</build_type>
    <!-- 构建依赖 -->
    <build_depend>rosidl_default_generators</build_depend>
    <!-- 执行时依赖 -->
    <exec_depend>rosidl_default_runtime</exec_depend>
  </export>
</package>
