<?xml version="1.0"?>
<package format="3">
  <name>find_the_largest_positivedirection</name>
  <version>0.0.0</version>
  <description>description</description>
  <maintainer email="123@123.ru">qq123456</maintainer>
  <license>License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>cv_bridge</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>yolov8_msgs</depend>
  <depend>vision_ros_msgs</depend>
  <depend>grasp_helper</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
