<?xml version="1.0"?>
<package format="3">
  <!-- 包的基本信息 -->
  <name>model_recognition</name>
  <version>0.0.0</version>
  <description>YOLOv8 for ROS 2</description>
  
  <!-- 维护者信息 -->
  <maintainer email="123@123.ru">123</maintainer>
  
  <!-- 许可证声明 -->
  <license>License declaration</license>

  <!-- 测试依赖 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- 运行和构建依赖 -->
  <depend>cv_bridge</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>

  <!-- 导出信息 -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
